; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_fmgr.c_DirectFunctionCall2Coll.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_fmgr.c_DirectFunctionCall2Coll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32, i8* }

@fcinfo = common dso_local global %struct.TYPE_9__* null, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"function %p returned NULL\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @DirectFunctionCall2Coll(i8* (%struct.TYPE_9__*)* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8* (%struct.TYPE_9__*)*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i8* (%struct.TYPE_9__*)* %0, i8* (%struct.TYPE_9__*)** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %11 = call i32 @LOCAL_FCINFO(%struct.TYPE_9__* %10, i32 2)
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %13 = load i32, i32* %6, align 4
  %14 = bitcast %struct.TYPE_9__* %12 to { i64, %struct.TYPE_8__* }*
  %15 = getelementptr inbounds { i64, %struct.TYPE_8__* }, { i64, %struct.TYPE_8__* }* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = getelementptr inbounds { i64, %struct.TYPE_8__* }, { i64, %struct.TYPE_8__* }* %14, i32 0, i32 1
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %19 = call i32 @InitFunctionCallInfoData(i64 %16, %struct.TYPE_8__* %18, i32* null, i32 2, i32 %13, i32* null, i32* null)
  %20 = load i8*, i8** %7, align 8
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i32 0, i32 1
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i64 0
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 1
  store i8* %20, i8** %25, align 8
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %27 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %26, i32 0, i32 1
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i64 0
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 0
  store i32 0, i32* %30, align 8
  %31 = load i8*, i8** %8, align 8
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %32, i32 0, i32 1
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i64 1
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 1
  store i8* %31, i8** %36, align 8
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i32 0, i32 1
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %39, i64 1
  %41 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %40, i32 0, i32 0
  store i32 0, i32* %41, align 8
  %42 = load i8* (%struct.TYPE_9__*)*, i8* (%struct.TYPE_9__*)** %5, align 8
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %44 = call i8* %42(%struct.TYPE_9__* %43)
  store i8* %44, i8** %9, align 8
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** @fcinfo, align 8
  %46 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %54

49:                                               ; preds = %4
  %50 = load i32, i32* @ERROR, align 4
  %51 = load i8* (%struct.TYPE_9__*)*, i8* (%struct.TYPE_9__*)** %5, align 8
  %52 = bitcast i8* (%struct.TYPE_9__*)* %51 to i8*
  %53 = call i32 @elog(i32 %50, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %52)
  br label %54

54:                                               ; preds = %49, %4
  %55 = load i8*, i8** %9, align 8
  ret i8* %55
}

declare dso_local i32 @LOCAL_FCINFO(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @InitFunctionCallInfoData(i64, %struct.TYPE_8__*, i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @elog(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
